# 100pristavok-parser

./: .gitignore  main.py  pyproject.toml
services/: chrome_driver.py  parser.py
utils/: constants.py  other.py
